--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80c12d8
+	base = 88c042d
 	trimbase = 
 	parent = release/kinetic/rqt_publisher
-	previous = 
+	previous = 80c12d8
