--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9196b17
+	base = 66c07c7
 	trimbase = 
 	parent = arch/kinetic/rqt_publisher
-	previous = 
+	previous = 9196b17
