--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 57b9698
+	base = ae99680
 	trimbase = 
 	parent = release/lunar/rqt_publisher
-	previous = 
+	previous = 57b9698
