--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5b8ef07
+	base = e1fa2a8
 	trimbase = 
 	parent = arch/lunar/rqt_publisher
-	previous = 
+	previous = 5b8ef07
