--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0442ba9
+	base = 2512ba2
 	trimbase = 
 	parent = release/melodic/rqt_publisher
-	previous = 
+	previous = 0442ba9
