--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0a3bb9d
+	base = abb5a38
 	trimbase = 
 	parent = arch/melodic/rqt_publisher
-	previous = 
+	previous = 0a3bb9d
